--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -23,35 +23,67 @@
 			color:#FFFFFF;
 		}
 
-#myCanvas{
-	border:4px solid #000000;
+#canvas_container{
+	width:800px;
+	height:600px;
+	margin-bottom:40px;
 }
-	
-	.coefficient{
-		text-align:center;
-		background: transparent;
-    	border: none;
-    	width:25px;
-		height:50px;
-		font-size: 16px;
-	}
 
-	.x_term {
-		display:table-cell;
-		vertical-align:middle;
-		width:50px;
-		height:50px;
-	    border-radius: 50%;
-	    background-color:#F00;
-	    border:1px solid #000;
+	#my_canvas{
+		border:4px solid #000000;
+		position: absolute;
+		margin:-7px;
+		left:25%;
+		z-index:0;
 	}
+		
+		.coefficient{
+			text-align:center;
+			background: transparent;
+	    	border: none;
+	    	width:25px;
+			height:50px;
+			font-size: 16px;
+		}
 
-	.c_term {
-		display:table-cell;
-		vertical-align:middle;
-		width:50px;
-		height:50px;
-	    border-radius: 50%;
-	    background-color:#00F;
-	    border:1px solid #000;
-	}
+		.x_term {
+			z-index:1;
+			position: relative;
+			display:table-cell;
+			vertical-align:middle;
+			width:50px;
+			height:50px;
+		    border-radius: 50%;
+		    background-color:#F00;
+		    border:1px solid #000;
+		}
+
+		.c_term {
+			z-index:1;
+			position: relative;
+			display:table-cell;
+			vertical-align:middle;
+			width:50px;
+			height:50px;
+		    border-radius: 50%;
+		    background-color:#00F;
+		    border:1px solid #000;
+		}
+
+		#left_side{
+			display: inline-block;
+			width:300px;
+			height:150px;
+			z-index:1;
+			position: relative;
+			
+		}
+
+		#right_side{
+			display: inline-block;
+			width:300px;
+			height:150px;
+			z-index:2;
+			position: relative;
+			
+		}
