--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -19,9 +19,18 @@
 		#x_label{
 			margin:10px;
 			width:100px;
-			background-color: #333;
-			color:#FFFFFF;
+			font-size: 24px;
+			background-color: #fff;
+			color:#000;
 		}
+
+		#x_val{
+			border: 0px;
+			display: inline-block;
+			width:60px;
+			font-size: 24px;
+		}
+
 
 #canvas_container{
 	width:800px;
@@ -29,6 +38,7 @@
 	margin-bottom:40px;
 }
 
+	
 	#my_canvas{
 		border:4px solid #000000;
 		position: absolute;
@@ -36,6 +46,15 @@
 		left:25%;
 		z-index:0;
 	}
+
+		#new_term_rack{
+			z-index:1;
+			height:50px;
+			background-color:#ccf;
+			padding-top: 10px;
+			border-bottom:6px solid #000;
+		}
+
 		
 		.coefficient{
 			text-align:center;
@@ -46,23 +65,10 @@
 			font-size: 16px;
 		}
 
-		.x_term {
+		.term{
 			z-index:1;
-			position: relative;
-			display:table-cell;
-			vertical-align:middle;
-			width:50px;
-			height:50px;
-		    border-radius: 50%;
-		    background-color:#F00;
-		    border:1px solid #000;
-		}
-
-		.c_term {
-			z-index:1;
-			position: relative;
-			display:table-cell;
-			vertical-align:middle;
+			position:relative;
+			display: inline-block;
 			width:50px;
 			height:50px;
 		    border-radius: 50%;
@@ -70,20 +76,44 @@
 		    border:1px solid #000;
 		}
 
-		#left_side{
-			display: inline-block;
-			width:300px;
-			height:150px;
-			z-index:1;
-			position: relative;
-			
+
+			.term.x {
+			    border:2px solid #FFF;
+			}
+
+			.term.c {
+			    border:2px solid #000;
+			}
+
+		.xterm_x_label{
+		    color: #000;
 		}
 
-		#right_side{
-			display: inline-block;
-			width:300px;
-			height:150px;
-			z-index:2;
+		#sides{
 			position: relative;
-			
+			background-color: #f00;
+			width:600px;
+		}
+
+		.side{
+			z-index:1;
+			position: absolute;
+			display: inline-block;
+			width:290px;
+			height:50px;
+			line-height: 50px;
+			background-color: #e5e5e5;
+			color: #888;
+		}
+
+			.side.left{
+				left:0px;
+			}
+
+			.side.right{
+				margin-left: 10px;
+			}
+
+		#trash {
+			left: -40%;
 		}
