--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -49,7 +49,7 @@
 
 		#new_term_rack{
 			z-index:1;
-			height:50px;
+			height:60px;
 			background-color:#ccf;
 			padding-top: 10px;
 			border-bottom:6px solid #000;
@@ -70,7 +70,8 @@
 			position:relative;
 			display: inline-block;
 			width:50px;
-			margin: 1px;
+			margin-left: 2px;
+			margin-right: 2px;
 			height:50px;
 		    border-radius: 50%;
 		    background-color:#00F;
