--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -1,9 +1,9 @@
 #toolbar{
-	background-color:#0000FF;
+	background-color:#0090FF;
 	width:800px;
 	height:180px;
-	border:4px solid #000000;
 	padding-top:30px;
+	border:4px solid #000;
 }
 	
 	#equation_field{
@@ -33,26 +33,18 @@
 
 
 #canvas_container{
+	position: relative;
 	width:800px;
 	height:600px;
 	margin-bottom:40px;
+	border:4px solid #000;
 }
 
-	
-	#my_canvas{
-		border:4px solid #000000;
-		position: absolute;
-		margin:-7px;
-		left:25%;
-		z-index:0;
-	}
-
 		#new_term_rack{
-			z-index:1;
 			height:60px;
-			background-color:#ccf;
+			background-color:#F2F2F2;
 			padding-top: 10px;
-			border-bottom:6px solid #000;
+			border-bottom:4px solid #000;
 		}
 
 		
@@ -62,11 +54,11 @@
 	    	border: none;
 	    	width:25px;
 			height:50px;
-			font-size: 16px;
+			color:#fff;
+			font-size: 20px;
 		}
 
 		.term{
-			z-index:1;
 			position:relative;
 			display: inline-block;
 			width:50px;
@@ -74,7 +66,7 @@
 			margin-right: 2px;
 			height:50px;
 		    border-radius: 50%;
-		    background-color:#00F;
+		    background-color:#2f2f2f;
 		    border:1px solid #000;
 		}
 
@@ -88,14 +80,16 @@
 			}
 
 		.xterm_x_label{
-		    color: #000;
+			font-size: 20px;
+		    color: #fff;
 		}
 
 		#sides{
 			position: relative;
 			width:600px;
 			height:50px;
-			border-bottom: 20px solid #000;
+			top:150px;
+			border-bottom: 10px solid #90FF00;
 		}
 
 		.sides-rotated-cw{
@@ -111,7 +105,6 @@
 		}
 
 		.side{
-			z-index:1;
 			position: absolute;
 			display: inline-block;
 			width:290px;
@@ -130,6 +123,6 @@
 			}
 
 		#trash {
-			top:-50px;
-			left: -40%;
+			position: relative;
+			top: 200px;
 		}
