--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -35,13 +35,13 @@
 #canvas_container{
 	position: relative;
 	width:800px;
-	height:450px;
+	height:550px;
 	margin-bottom:40px;
 	border:4px solid #000;
 }
 
 		#new_term_rack{
-			height:60px;
+			height:120px;
 			background-color:#F2F2F2;
 			padding-top: 10px;
 			border-bottom:4px solid #000;
@@ -55,19 +55,20 @@
 	    	width:25px;
 			height:50px;
 			color:#fff;
-			font-size: 20px;
+			font-size: 50px;
 		}
 
 		.term{
 			position:relative;
 			display: inline-block;
-			width:50px;
+			width:100px;
+			height:100px;
 			margin-left: 2px;
 			margin-right: 2px;
-			height:50px;
 		    border-radius: 50%;
 		    background-color:#00f;
 		    border:1px solid #000;
+		    line-height: 120px;
 		}
 
 
@@ -80,7 +81,7 @@
 			}
 
 		.xterm_x_label{
-			font-size: 20px;
+			font-size: 0px;
 		    color: #fff;
 		}
 
@@ -108,7 +109,7 @@
 			position: absolute;
 			display: inline-block;
 			width:290px;
-			height:50px;
+			height:100px;
 			line-height: 50px;
 			background-color: #e5e5e5;
 			color: #888;
