fixed ipad drag and drop. working on looks

--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -51,6 +51,7 @@
 		.coefficient{
 			text-align:center;
 			background: transparent;
+			display: inline-block;
 	    	border: none;
 	    	width:25px;
 			height:50px;
