--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -20,7 +20,6 @@
 			margin:10px;
 			width:100px;
 			font-size: 24px;
-			background-color: #fff;
 			color:#000;
 		}
 
@@ -28,6 +27,7 @@
 			border: 0px;
 			width:60px;
 			font-size: 24px;
+			text-align: center;
 		}
 
 
