--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -6,11 +6,17 @@
 	border:4px solid #000;
 }
 	
-	#equation_field{
+	.equation_field {
 		margin:10px;
-		font-size:24px;
+		font-size:25px;
 		text-align:center;
 		resize:none;
+	}
+
+	.equation_field.scale {
+		
+		background-color: #2f2f2f;
+		color: #f2f2f2;
 	}
 	
 	#button{
@@ -32,7 +38,7 @@
 
 		#x_val{
 			border: 0px;
-			width:60px;
+			width:100px;
 			font-size: 24px;
 			text-align: center;
 		}
