--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -6,15 +6,8 @@
 	border:4px solid #000;
 }
 
-	#matches {
-		position: relative;
-		display: inline-block;
-		width: 25px;
-		margin-left: 10px;
-		margin-right: 10px;
-		font-size: 50px;
-		font-weight: bolder;
-		color: #0f0;
+	#equations {
+		margin: 20px;
 	}
 
 	#problem_eq {
