--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -65,6 +65,7 @@
 			height:120px;
 			padding-top: 10px;
 			border-bottom:4px solid #000;
+			background-color: #2fff2f;
 		}
 
 		
@@ -127,7 +128,7 @@
 			width:700px;
 			height:50px;
 			top:150px;
-			border-bottom: 10px solid #90FF00;
+			border-bottom: 10px solid #0090FF;
 		}
 
 		.sides-rotated-cw{
