--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -53,6 +53,10 @@
 			text-align: center;
 		}
 
+		.invisible {
+			visibility: hidden;
+		}
+
 		#show_x{
 			font-size: 15px;
 		}
@@ -71,9 +75,6 @@
 			border-bottom:4px solid #000;
 			background-color: #2fff2f;
 		}
-
-		
-		
 
 		.wrapper {
 			position:relative;
@@ -174,6 +175,7 @@
 			position: relative;
 			top: 225px;
 		}
+
 #instructions{
 	width:900px;
 }
