fxied color on term rack

--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -73,7 +73,7 @@
 			height:120px;
 			padding-top: 10px;
 			border-bottom:4px solid #000;
-			background-color: #2fff2f;
+			background-color: #B5B5B5;
 		}
 
 		.wrapper {
