changed toolbar color

--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -133,7 +133,7 @@
 			width:700px;
 			height:50px;
 			top:150px;
-			border-bottom: 10px solid #0090FF;
+			border-bottom: 10px solid #0084D1;
 		}
 
 		.sides-rotated-cw{
